@@ -2,14 +2,18 @@
 Hash: SHA1
 
 DIST elisp-info.tar.gz 687236 RMD160 5c0205a543967f72a4832fcf7a992c3fbbfdc863 SHA1 d10771de4f46441368ca346ecb3877dfb6c8e6c0 SHA256 dc8fe63a70dac38a789fc515217e811526516f50d470ba00d97cd46b3f17cc8f
+EBUILD elisp-manual-21.2.8-r1.ebuild 779 RMD160 7e40b7f4e6837478549334baa4840e6fe9978797 SHA1 99638017bdd72c97e6df071e72c0d63d46bf0c66 SHA256 f7104011a709134031bec891509263dda0aeb34c2154de219454019e891be1d8
+MD5 d7c6a7a9509843aef200970cfd50f330 elisp-manual-21.2.8-r1.ebuild 779
+RMD160 7e40b7f4e6837478549334baa4840e6fe9978797 elisp-manual-21.2.8-r1.ebuild 779
+SHA256 f7104011a709134031bec891509263dda0aeb34c2154de219454019e891be1d8 elisp-manual-21.2.8-r1.ebuild 779
 EBUILD elisp-manual-21.2.8.ebuild 645 RMD160 0e443e5cd7a83fdcf88eb950220138275be28b45 SHA1 c17e71245a83381b5c691af40db5b73e31a2043d SHA256 d0045369d66538535d503674d4e79fc1ca3e8af2a5af9e0f720d22d8718c4936
 MD5 76c67ad765611d5b53c836062d369429 elisp-manual-21.2.8.ebuild 645
 RMD160 0e443e5cd7a83fdcf88eb950220138275be28b45 elisp-manual-21.2.8.ebuild 645
 SHA256 d0045369d66538535d503674d4e79fc1ca3e8af2a5af9e0f720d22d8718c4936 elisp-manual-21.2.8.ebuild 645
-MISC ChangeLog 1424 RMD160 2c5e277ab89a65edb91ce7e9bd0cbcb304aa9230 SHA1 3aa1d70b8aec51c229d73d8ad6e9a9878fd5cdb3 SHA256 2db00b6962ce88ae2ae8b42051feee0296e6a9887ade8ff0ecf9d3a34ee64d5b
-MD5 66d725872442da72bbc43af652e4a781 ChangeLog 1424
-RMD160 2c5e277ab89a65edb91ce7e9bd0cbcb304aa9230 ChangeLog 1424
-SHA256 2db00b6962ce88ae2ae8b42051feee0296e6a9887ade8ff0ecf9d3a34ee64d5b ChangeLog 1424
+MISC ChangeLog 1613 RMD160 6ff4547c9a8caeea58ac3e09b380ee1d3dc6fe2e SHA1 cab6619f2737de62376deb049a5e1840fa59d4e3 SHA256 9586ec8030390125f0e151d8e0a65120fdef2bb8dcfcc8708a5d490ca0a9b2c5
+MD5 c502c31f0a573cc815e08407ca264d02 ChangeLog 1613
+RMD160 6ff4547c9a8caeea58ac3e09b380ee1d3dc6fe2e ChangeLog 1613
+SHA256 9586ec8030390125f0e151d8e0a65120fdef2bb8dcfcc8708a5d490ca0a9b2c5 ChangeLog 1613
 MISC metadata.xml 159 RMD160 f997186a466cc3629429a6adbb6d6c609c621a7a SHA1 da32fed3458e2338a09e325da366caca249ea44e SHA256 1a2c240d1d46720c2d261c95e014a19171e6147da6651e92557a51df3f2feb37
 MD5 c2e93cddbdf4bc28025b388bf3d6f2e6 metadata.xml 159
 RMD160 f997186a466cc3629429a6adbb6d6c609c621a7a metadata.xml 159
@@ -17,10 +21,13 @@ SHA256 1a2c240d1d46720c2d261c95e014a19171e6147da6651e92557a51df3f2feb37 metadata
 MD5 c5bba5e34e4932caad58acd1082642f5 files/digest-elisp-manual-21.2.8 232
 RMD160 cceb3ce07823c8dc5bb7edc82fb8fbf86e7732e3 files/digest-elisp-manual-21.2.8 232
 SHA256 8c2ce766730694b20c12667ef45494cc1474a1e6afc1a70f05315798eb4377fc files/digest-elisp-manual-21.2.8 232
+MD5 c5bba5e34e4932caad58acd1082642f5 files/digest-elisp-manual-21.2.8-r1 232
+RMD160 cceb3ce07823c8dc5bb7edc82fb8fbf86e7732e3 files/digest-elisp-manual-21.2.8-r1 232
+SHA256 8c2ce766730694b20c12667ef45494cc1474a1e6afc1a70f05315798eb4377fc files/digest-elisp-manual-21.2.8-r1 232
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.6 (GNU/Linux)
+Version: GnuPG v1.4.7 (GNU/Linux)
 
-iD8DBQFGHdniNQqtfCuFneMRAs5iAJ0e4n2pbn3E+A3myeDzFJeh+jB3ywCeIFZe
-8eNgti/8+LPXgJ6mK18OBXg=
-=SZcg
+iD8DBQFGJbmBOeoy/oIi7uwRAlYOAJ4x29JPKqdfkt7+Xhgt8+QBUI5slQCg0tTW
+k+XVAfQj6Y8VxnQl2iTNx5k=
+=ua0M
 -----END PGP SIGNATURE-----
