@@ -1,6 +1,12 @@
 # ChangeLog for app-editors/elisp-manual
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/elisp-manual/Attic/ChangeLog,v 1.13 2007/04/12 07:03:56 opfer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/elisp-manual/Attic/ChangeLog,v 1.14 2007/04/18 06:21:51 ulm Exp $
+
+*elisp-manual-21.2.8-r1 (18 Apr 2007)
+
+  18 Apr 2007; Ulrich Mueller <ulm@gentoo.org>
+  +elisp-manual-21.2.8-r1.ebuild:
+  Info dir section changed to Emacs (as it is for elisp manual v.22).
 
   12 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
   elisp-manual-21.2.8.ebuild:
